--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="container">
         <h1>Expense Tracker</h1>
+        <div class="dark-mode-toggle">
+            <input type="checkbox" id="darkModeToggle">
+            <label for="darkModeToggle">Dark Mode</label>
+        </div>
         <input type="text" id="expenseInput" placeholder="Enter expense description">
         <input type="number" id="amountInput" placeholder="Enter amount">
         <button onclick="addExpense()">Add Expense</button>
